force-app/src/objects/cpm__Bank_Feed_Authorization_Account__c.object
<CustomObject>
    <fields>
        <fullName>cpm__Account_Id__c</fullName>
        <description>The reference to the bank account / IBAN as stored by the AISP.</description>
        <externalId>true</externalId>
        <label>Account Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Authorization_Status__c</fullName>
        <description>The status of the authorization for this account connection.</description>
        <formula>TEXT(cpm__Bank_Feed_Authorization__r.cpm__Status__c)</formula>
        <label>Status</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>cpm__Bank_Feed_Account__c</fullName>
        <description>The Bank Account record this authorization is for.</description>
        <label>Bank Feed Account</label>
        <referenceTo>cpm__Bank_Account__c</referenceTo>
        <relationshipLabel>Bank Feed Authorization Accounts</relationshipLabel>
        <relationshipName>Bank_Feed_Authorization_Accounts</relationshipName>
        <relationshipOrder>1</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cpm__Bank_Feed_Authorization__c</fullName>
        <description>The Authorization record for the bank account.</description>
        <label>Bank Feed Authorization</label>
        <referenceTo>cpm__Bank_Feed_Authorization__c</referenceTo>
        <relationshipLabel>Bank Feed Authorization Accounts</relationshipLabel>
        <relationshipName>Bank_Feed_Authorization_Accounts</relationshipName>
        <relationshipOrder>0</relationshipOrder>
        <type>MasterDetail</type>
    </fields>
    <fields>
        <fullName>cpm__Resource_Id__c</fullName>
        <description>The agreement id of the authorization.</description>
        <externalId>true</externalId>
        <label>Resource Id</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <label>Bank Feed Authorization Account</label>
    <nameField>
        <displayFormat>BFA-{00000000}</displayFormat>
        <label>Bank Feed Authorization Account Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Bank Feed Authorization Accounts</pluralLabel>
    <sharingModel>ControlledByParent</sharingModel>
</CustomObject>